#!/bin/sh
#
# Exports
dir=$ANDROID_BUILD_TOP
out=$dir/out/target/product

export Changelog=Changelog.txt

if [ -f $Changelog ];
then
	rm -f $Changelog
fi

touch $Changelog

# Print something to build output
echo ${bldppl}"Generating changelog..."${txtrst}

# Use 'export USER_BUILD_NO_CHANGELOG=1' before build/envsetup.sh to skip changelog
if [ $USER_BUILD_NO_CHANGELOG ]&&[ "$USER_BUILD_NO_CHANGELOG" -eq 1 ]; then
  echo "Skipped because variable 'USER_BUILD_NO_CHANGELOG' was set to 1" | tee $Changelog;
else
  for i in $(seq 10);
  do
  export After_Date=`date --date="$i days ago" +%m-%d-%Y`
  k=$(expr $i - 1)
    export Until_Date=`date --date="$k days ago" +%m-%d-%Y`

    # Line with after --- until was too long for a small ListView
    echo '====================' >> $Changelog;
    echo  "     "$Until_Date       >> $Changelog;
    echo '===================='	>> $Changelog;
    echo >> $Changelog;

    # Cycle through every repo to find commits between 2 dates
    CURRENT_PATH="$(realpath `pwd`)"

    repo forall -c "GIT_LOG=\`git log --oneline --after=$After_Date --until=$Until_Date\` ; if [ ! -z \"\$GIT_LOG\" ]; then printf  '\n   * '; realpath \`pwd\` | sed 's|^$CURRENT_PATH/||' ; echo \"\$GIT_LOG\"; fi" >> $Changelog
    echo >> $Changelog;
  done

  sed -i 's/project/   */g' $Changelog
fi

if [ -e $out/*/$Changelog ]
then
rm $out/*/$Changelog
fi
if [ -e $out/*/system/etc/$Changelog ]
then
rm $out/*/system/etc/$Changelog
fi
cp $Changelog $CURRENT_PATH/out/target/product/system/etc/
cp $Changelog $CURRENT_PATH/out/target/product/
rm $Changelog

exit 0