@@ -34,8 +34,9 @@ else
 
     # Cycle through every repo to find commits between 2 dates
     CURRENT_PATH="$(realpath `pwd`)"
-
-    repo forall -c "GIT_LOG=\`git log --oneline --after=$After_Date --until=$Until_Date\` ; if [ ! -z \"\$GIT_LOG\" ]; then printf  '\n   * '; realpath \`pwd\` | sed 's|^$CURRENT_PATH/||' ; echo \"\$GIT_LOG\"; fi" >> $Changelog
+        if [ ! -z "$REPO_EXEC" ]; then
+	    $REPO_EXEC forall -pc 'git log --pretty=format:"%h  %s  [%cn]" --decorate --after=$After_Date --until=$Until_Date' >> $Changelog
+        fi
     echo >> $Changelog;
   done
 
